# RayTracer

./: .gitignore  CMakeLists.txt  README.md
include/: color.hpp  light.hpp  math.hpp  objects.hpp  ray.hpp  raytracer.hpp  surface.hpp  transform.hpp
src/: sdl_renderer_advanced.cpp
